# autocana

./: .gitignore  .ruff.toml  MANIFEST.in  README.md  invoice.config.template.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: pytests.yaml
autocana/: __main__.py  cli.py  config.py  constants.py  invoice.py  main.py
autocana/data/: config.py  download.py  invoice.py  newproject.py  private.py  reencode.py  tsh.py  video.py
autocana/reporters/: errors.py  logs.py  output.py
autocana/templates/: default-config.yaml  invoice.docx  tsh.xlsx
scripts/: invoice.py
templates/: invoice.docx
tests/: dumb_test.py  invoice_test.py
