[metadata]
name = autocana
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Iago Santos
license = MIT
license_files = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    docxtpl
    openpyxl
    pyyaml
python_requires = >=3.12
dependency_links = https://github.com/iagocanalejas/pyutils.git@master#egg=pyutils
include_package_data = True

[options.entry_points]
console_scripts =
    autocana = autocana.main:main
